--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     }
 }
 
+ext{
+    exoplayer = '2.14.1'
+}
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.3.0'
@@ -36,4 +40,5 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "com.google.android.exoplayer:exoplayer:$exoplayer"
 }
