--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ ext{
     retrofit = '2.9.0'
     retrofit_gson = '2.4.0'
     rxJava = '1.3.0'
+    rxAndroid = '1.2.1'
+    multidex = '2.0.0'
 }
 
 dependencies {
@@ -50,8 +52,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "com.google.android.exoplayer:exoplayer:$exoplayer"
 
+    //Dagger
     implementation "com.google.dagger:dagger:$dagger"
+    implementation "com.google.dagger:dagger-android-support:$dagger"
     annotationProcessor "com.google.dagger:dagger-compiler:$dagger"
+    annotationProcessor "com.google.dagger:dagger-android-processor:$dagger"
 
     //Utility Module
     implementation project(":utility")
@@ -62,4 +67,10 @@ dependencies {
 
     //RxJava
     implementation "io.reactivex:rxjava:$rxJava"
+
+    //RxAndroid
+    implementation "io.reactivex:rxandroid:$rxAndroid"
+
+    //Multidex
+    implementation "androidx.multidex:multidex:$multidex"
 }
